# lecture-statistics

./: .gitignore
lecture-surveys/: Manifest.toml  Project.toml  app.py  components.py  earnings.py  exam-questions.py  fakedata.jl  hello.py  helpers.py  leaflet_app.js  livingcost.py  news.py  obs-scatter-dist.js  observable_hist.js  place.py  pyproject.toml  session-01.py  session-02.py  session-03.py  session-05.py  session-06.py  session-07.py  test.py
lecture-surveys/fakedata/: data.csv  place.csv
lecture-surveys/session-01/: fetch-data.js  leaflet-map-dists.js  obs-boxp-grade.js  obs-hist-dist.js  obs-hist-getuptime.js  obs-hist-grade.js  obs-map-dens.js  obs-scatter-dist-time.js  obs-scatter-dist.js  pico-leaflet.css  pysurv-session-01.py
lecture-surveys/session-02/: obs-datatypes.js  obs-livingcost.js  pysurv-livingcost.py  pysurv-news.py
lecture-surveys/session-03/: obs-livingcost-median.js  obs-livingcost-relative.js
lecture-surveys/session-05/: obs-measures.js
lecture-surveys/session-06/: obs-scatter-cor.js  obs-wahlen-kont.js
lecture-surveys/session-07/: obs-randomnumbers.js
lecture-surveys/session-11/: obs-exam-questions.js
results/: Manifest.toml  Project.toml  app.jl  components.jl  earnings.jl  leaflet.jl  livingcost.jl  test.jl  theme.jl  tyler.jl
slides/: .vdoc.r  Manifest.toml  Project.toml  beispiele-univariat.html  beispiele-univariat.qmd  coinflip.webm  custom.css  custom.scss  datentypen-visualisierung.html  datentypen-visualisierung.qmd  einfuehrung-alt.qmd  einfuehrung.html  einfuehrung.qmd  klausurfragen.html  klausurfragen.qmd  (+24 more)
(+10 files in other folders)
